# geospatial-utils

./: .gitmodules  README.md  pyproject.toml
.github/: dependabot.yml
geospatial-utils/: Dockerfile  config.py  convert.py  geo.py  geo_test.py  main.py  run_locally.sh  validate.py
geospatial-utils/adjusters/: __init__.py  foca.py
geospatial-utils/configs/: FOCA.json
geospatial-utils/fileutils/: __init__.py  ed269.py
